--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,7 +1,7 @@
 {% for blog in blogs.all%}<!--내가 지금까지 작성한 모든 블로그의 객체(글)들이 담긴다.-->
     <h1> 제목: {{blog.title}}</h1>
     <p> 날짜: {{blog.pub_date}}</p>
-    <p> 본문: {{blog.body}} </p>
+    <p> 본문: {{blog.summary}}<a href="{% url 'detail' blog.id%}">...more</a> </p>
     <!--blog를 한번 순회할 때마다 각각의 글들의 title, pub_date, body가 담긴다.-->
     <br><br>
 {%endfor%}
